Does this fix the frame alignment?

--- a/PlaneBuilder/page/style.css
+++ b/PlaneBuilder/page/style.css
@@ -110,6 +110,8 @@ span {
 }
 
 label {
+	border-collapse: collapse;
+	box-sizing: border-box;
 	height: 1.5em !important;
 	display:inline-block;
 	font-size: 1em;
@@ -118,13 +120,18 @@ label {
 }
 
 select, input {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	-o-appearance: none;
+	box-sizing: border-box;
 	height: 1.5em !important;
 	background-color: #383838;
 	color: #c7c7c7;
 	border-color: #555555;
 	text-align: center;
 	border-style: solid;
-	line-height: 0.75em;
+	line-height: 1.5em;
+	font-size: 1em;
 	vertical-align: bottom;
 }
 
@@ -150,7 +157,7 @@ input[type='checkbox'][disabled]{
 	color: #000000;
 	outline: 1px solid #000000;
 	box-shadow: none;
-	font-size: 1em;
+	font-size: 0.75em;
 	text-align: left;
 	line-height: 0.75em;
 }
@@ -199,7 +206,9 @@ button {
 	color: #c7c7c7;
 	border-color: #555555;
 	text-align: center;
-	height: 1.5em;
+	box-sizing: border-box;
+	height: 1.5em !important;
+	font-size: 1em;
 	border-bottom:1px solid;
 	border-top:1px solid;
 	border-left:1px solid;
